<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".CrocodileActivity">

    <fragment
        android:id="@+id/host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_host_fragment" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/timer_count"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/gamers"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <TextView
        android:id="@+id/timer_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_count"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintBottom_toTopOf="@id/gamers_count"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <TextView
        android:id="@+id/timer_touch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@id/margin_end"
        app:layout_constraintBottom_toTopOf="@id/gamers"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <TextView
        android:id="@+id/gamers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamers"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/timer" />

    <TextView
        android:id="@+id/gamers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamers_count"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintTop_toBottomOf="@id/timer_count" />

    <TextView
        android:id="@+id/gamers_touch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@id/margin_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/timer_touch" />

</androidx.constraintlayout.widget.ConstraintLayout>